--- a/eda.ipynb
+++ b/eda.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "(2974, 22)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "1          0      0        19               19   -35.61    -60.92  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
        "2973          0      0         0            15876   -26.81    -65.31  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
        "max        129613.00        20205.00 15008.00  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
        "max    444.00  18447.00       1547679.00  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
        "(840, 24)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1048,7 @@
        "1      560701.00      129613.00         20205.00 105477.00  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
        "839   0.00  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1252,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1472,7 @@
        "max                101.05  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1643,7 +1643,7 @@
        "max        182661.00         33829.00 120987.00  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1677,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
        "(35, 4)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1714,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +1769,7 @@
        "1  2022          2               58.44 60335723.87"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1780,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1835,7 +1835,7 @@
        "34  2014          1                3.62 2984054.21"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1860,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1873,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1898,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1983,7 +1983,7 @@
        "max                 62.46 67055929.82"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2034,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2948,6 +2948,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![figura1](src/figura1.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "📝 En el gráfico de barras podemos observar una tendencia a incrementar la cantidad de ingresos cada año por la prestación del servicio de internet."
    ]
   },
@@ -2960,7 +2967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3928,6 +3935,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![figura2](src/figura2.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "📝 En el gráfico podemos observar una tendencia a incrementar la velocidad de descarga cada año a nivel global, se puede notar además una variación en la pendiente a partir del 2019."
    ]
   },
@@ -3940,7 +3954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -4865,7 +4879,7 @@
          }
         },
         "title": {
-         "text": "Boxplot de Velocidad Media por Año"
+         "text": "Velocidad Media por Año"
         },
         "xaxis": {
          "anchor": "y",
@@ -4916,6 +4930,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![figura3](src/figura3.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "📝 En el gráfico podemos observar la distribución de velocidades de descarga por cada año, teniendo una mayor distribución a partir del 2019, se presume mayor creación de planes y servicios de internet."
    ]
   },
@@ -4928,7 +4949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -5091,7 +5112,7 @@
        "2       16458.00        2242.00             1.00   2208.00  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5109,7 +5130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -5189,7 +5210,7 @@
        "2           70292       1        70293  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5201,7 +5222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -6571,6 +6592,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![figura4](src/figura4.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "📝 En todas las regiones se ve una tendencia a la alza de la banda ancha mientras que la banda angosta se mantiene o baja:\n",
     "Áreas rurales: En algunas zonas rurales o remotas, puede ser difícil o costoso implementar infraestructuras de banda ancha. En tales casos, el acceso dial-up puede ser una opción más viable para tener conectividad básica a Internet.\n",
     "\n",
@@ -6586,7 +6614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -6662,7 +6690,7 @@
        "2         16.62         65.30  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6674,7 +6702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -8044,6 +8072,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![figura5](src/figura5.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "📝 En todas las regiones se ve una tendencia a la alza en ambas variables. "
    ]
   },
@@ -8056,7 +8091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -8148,7 +8183,7 @@
        "2  10010.00    10495.00     46224.00   1329.00      2235.00   70293.00  "
       ]
      },
-     "execution_count": 138,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8160,7 +8195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -10065,6 +10100,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![figura6](src/figura6.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "📝 En todas las regiones se ve una tendencia a la alza de tecnologías relacionadas a Fibra óptica y una disminución en conexiones como ADSL."
    ]
   },
@@ -10077,7 +10119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -10149,7 +10191,7 @@
        "2               60.99  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10161,7 +10203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -11192,6 +11234,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![figura7](src/figura7.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "📝 En todas las regiones podemos observar como cada año la velocidad de descarga va aumentando."
    ]
   },
@@ -11204,7 +11253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -12608,6 +12657,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![figura8](src/figura8.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "📝 En todas las provincias podemos observar como cada año la velocidad de descarga va aumentando cada año, se puede notar que la brecha entre los años cada vez es un poco más grande. También se pueden observar cuales son las provincias con una velocidad de descarga más baja como: Chubut, La Pampa, San Juan, San Luis, Santa Cruz, Santiago del Estero y Tierra del Fuego."
    ]
   },
@@ -12620,7 +12676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -12770,7 +12826,7 @@
        "2          0      0         1              713   -34.79    -58.72  "
       ]
      },
-     "execution_count": 140,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12781,7 +12837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -12795,7 +12851,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12813,7 +12869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -26596,7 +26652,7 @@
             "rgb(49,54,149)"
            ]
           ],
-          "opacity": 1,
+          "opacity": 0.8,
           "size": 5
          },
          "mode": "markers",
@@ -30460,6 +30516,13 @@
     ")\n",
     "\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![figura9](src/figura9.jpg)"
    ]
   },
   {
@@ -83346,13 +83409,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Estos los puedo ver asi en el EDA y luego en el streamlit arreglarlo para que sea un boton"
+    "![figura10](src/figura10.jpg)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
